BLTI-123
Initial commit of the framework to support POX-Style IMS 
Services.



git-svn-id: https://source.sakaiproject.org/svn/basiclti/trunk@96931 66ffb92e-73f9-0310-93c1-f5514f145a0a